tests/ui/runtime-session-id-field-private.stderr
error[E0423]: cannot initialize a tuple struct which contains private fields
 --> tests/ui/runtime-session-id-field-private.rs:4:13
  |
4 |     let _ = SessionId(1);
  |             ^^^^^^^^^
  |
note: constructor is not visible here due to private fields
 --> src/session/types.rs
  |
  | pub struct SessionId(u32);
  |                      ^^^ private field
help: you might have meant to use the `new` associated function
  |
4 |     let _ = SessionId::new(1);
  |                      +++++
