tests/ui/runtime-session-id-field-private.rs
use hibana::runtime::ids::SessionId;

fn main() {
    let _ = SessionId(1);
    let _ = SessionId::new(1);
}
